# WaveSynthDIY

./: .gitignore
firmware/: CMakeLists.txt
firmware/asm/: audio_device.pio
firmware/include/: ADSR.hpp  AnalogArray.hpp  AudioDevice.hpp  AudioInterface.hpp  ButtonArray.hpp  Events.hpp  HWProfiler.hpp  InstrumentManager.hpp  StaticQueue.hpp  WavetableSynth.hpp
firmware/include/Controller/: Controller.hpp  Sequencer.hpp
firmware/include/SynthCore/: Common.hpp  Components.hpp  Data.hpp  Engine.hpp  Patches.hpp
firmware/src/: AnalogArray.cpp  ButtonArray.cpp  CMakeLists.txt  InstrumentManager.cpp  WavetableSynth.cpp  main.cpp
firmware/src/Controller/: CMakeLists.txt  Controller.cpp  Sequencer.cpp
firmware/src/SynthCore/: CMakeLists.txt  Components.cpp  Engine.cpp
firmware/tests/: CMakeLists.txt  engine_tests.cpp  testgen.cpp  tests.code-workspace
playground/analog_mux/: analog_mux.kicad_prl  analog_mux.kicad_pro  analog_mux.kicad_sch
playground/analog_mux/code/: CMakeLists.txt  code.cpp  notes.md
playground/basic_audio/: CMakeLists.txt  basic_audio.cpp  basic_audio.pio
playground/button_registers/: button_registers.kicad_prl  button_registers.kicad_pro  button_registers.kicad_sch
playground/button_registers/button_test_code/: CMakeLists.txt  blink.pio  button_test_code.cpp  notes.md
playground/encodertest/: CMakeLists.txt  button_array.pio  encodertest.cpp
playground/wtdata_mock_1/: wave_tables.cpp  wave_tables.hpp
software/: pluto-tablegen.jl  tablegen.jl  wavetable_notes.md
